Fixed about me alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -341,7 +341,7 @@ margin: 2rem 0 1.5rem; /* Top margin of 2rems and bottom of 1.5 */
     color: #a1a0a8;
     letter-spacing: 1px;
     margin: 2rem 6rem 1.5rem; /* Top margin of 2rems and bottom of 1.5 */
-    text-align: center;
+    text-align: justify;
 }
 
 .hero__image {
